Ensure border left of avatar in account header is visible

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -7066,7 +7066,6 @@ noscript {
     margin-top: -55px;
     padding-top: 10px;
     gap: 8px;
-    overflow: hidden;
     margin-left: -2px; // aligns the pfp with content below
 
     &__buttons {
